[package]
name = "minimalos"
version = "0.1.0"
authors = ["zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "*"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
