[package]
name = "minimalos"
version = "0.1.0"
authors = ["zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = "*"
volatile = "0.2.6"
pic8259_simple = "0.2.0"
x86_64 = "0.11.0"
spin = "0.5.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

