[package]
name = "minimalos"
version = "0.2.0"
authors = ["zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
volatile = "0.2.6"
pic8259_simple = "0.2.0"
x86_64 = "0.11.0"
spin = "0.5.2"
uart_16550 = "0.2.7"
pc-keyboard = "0.5.0"
bootloader = { version = "0.9.3", features = ["map_physical_memory"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
